updated tracking to show past tracking graphs

--- a/trakberry/templates/track.html
+++ b/trakberry/templates/track.html
@@ -219,7 +219,7 @@ End of Shift Projection : {{request.session.projection1}}
 <table style="width:40%;border: 1px solid black;"><tr><td style="border:1px solid black;">
 {% for i in datax %}
 <tr><td style="border:1px solid black;">
-<a href="{{request.session.local_toggle}}/track_graph_10r_prev/get/{{i.0}}" onclick="window.open('{{request.session.local_toggle}}/track_graph_10r_prev/get/{{i.0}}', 'newwindow', 'width=1400, height=600'); return false;">
+<a href="{{request.session.local_toggle}}/track_graph_prev1/get/{{i.0}}" onclick="window.open('{{request.session.local_toggle}}/track_graph_prev1/get/{{i.0}}', 'newwindow', 'width=1400, height=600'); return false;">
 {{i.1}}
 {{i.2}}
 {{i.3}},
@@ -269,7 +269,7 @@ End of Shift Projection : {{request.session.projection1}}
 	<table style="width:40%;border: 1px solid black;"><tr><td style="border:1px solid black;">
 	{% for i in datax2 %}
 	<tr><td style="border:1px solid black;">
-	<a href="{{request.session.local_toggle}}/track_graph_10r_prev/get/{{i.0}}" onclick="window.open('{{request.session.local_toggle}}/track_graph_10r_prev/get/{{i.0}}', 'newwindow', 'width=1400, height=600'); return false;">
+	<a href="{{request.session.local_toggle}}/track_graph_prev2/get/{{i.0}}" onclick="window.open('{{request.session.local_toggle}}/track_graph_prev2/get/{{i.0}}', 'newwindow', 'width=1400, height=600'); return false;">
 	{{i.1}}
 	{{i.2}}
 	{{i.3}},
