--- a/trakberry/templates/graph_prev2.html
+++ b/trakberry/templates/graph_prev2.html
@@ -105,6 +105,11 @@ function drawCurveTypes() {
 
 <br><br>
 <input type="button" value="Close this window" onclick="windowClose();">
+<br> <center>
+	<font style="font-size: 35px; color:rgb(141, 179, 236); text-shadow: 1px 1px 2px black, 0 0 25px rgb(0, 0, 0), 0 0 5px rgb(255, 255, 255);">
+		{{request.session.area2}}
+</font>
+</center>
 <br> 
 <div id="chart_div" style="width: 100%; height: 400px; "></div>
 <br>
