--- a/trakberry/templates/test71.html
+++ b/trakberry/templates/test71.html
@@ -1,9 +1,9 @@
 <html>
 <body>
 
-{% for i in index %}
+{% for i in matrix %}
 
-{{i.0}}     ----     {{i.1}}
+{{i.4}} ----- {{i.5}} -----{{i.0}} --- {{i.1}} --- {{i.2}} -- {{i.3}}
 <br>
 {% endfor %}
 <br>
