--- a/trakberry/templates/training_matrix2.html
+++ b/trakberry/templates/training_matrix2.html
@@ -73,6 +73,37 @@ th {
 
 </script>
 
+
+
+
+<script src="/static/bootstrap/js/1.11.3/jquery.min.js"></script>
+      <script src="/static/bootstrap/js/bootstrap.min.js"></script>
+			<link rel="stylesheet" href="/static/bootstrap/css/bootstrap.min.css">
+			
+			<link href="/static/bootstrap/css/bootstrap-toggle/bootstrap-toggle.min.css" rel="stylesheet">
+			<script src="/static/bootstrap/css/bootstrap-toggle/bootstrap-toggle.min.js"></script>
+
+
+			{% if request.session.bounce_matrix == 1 %}  
+			<script type="text/javascript">
+			$(document).ready(function(){
+			$("#myModal").modal('show');
+			});
+			</script>
+			<style>
+		
+						.modal-body
+						{background-color: rgb(197, 197, 197);}
+						.modal-header
+						{background-color: rgb(126, 126, 126);}
+						.modal-footer
+						{background-color: rgb(197, 197, 197);}
+						.modal 
+						{border-radius: 25px; }
+		
+			</style>
+		{% endif %}
+
 </head>
 
 <form action="" method="post">{% csrf_token %}
@@ -84,9 +115,9 @@ th {
       <tr>
 				<th style="border:1px solid black;z-index: 99;">
 				<!-- put in Color Key top left-->
-				<input style="background-color: #a5ebf3;border-radius: 5px;width:90%;height:90%;font-weight: 500;font-size:15px;align=left;" type="submit" value="SAVE">
-			<br>
-			<select id="matrix_shift" style="font-size:15px;" onchange="myFunction();" list="browsers" name="matrix_shift" {{request.session.matrix_shift}}>	
+				
+
+			<select id="matrix_shift" style="background-color: #315238;font-size:10px;" onchange="myFunction();" list="browsers" name="matrix_shift" {{request.session.matrix_shift}}>	
 				<option value="{{request.session.matrix_shift}}" selected>{{request.session.matrix_shift}}</option>
 				<option value="Plant 1 Mid">Area 1 Mid</option>
 				<option value="Plant 1 Aft">Area 1 Aft</option>
@@ -98,8 +129,15 @@ th {
 				<option value="Plant 4 Aft">Area 3 Aft</option>
 				<option value="Plant 4 Day">Area 3 Day</option>
 			</select>
-
+			<br><br>
+			<input style="background-color: #315357;border-radius: 5px;width:90%;font-weight: 500;font-size:10px;align=left;" type="submit" value="SAVE">
+			<br><br>
+			<button style="background-color: #555231;border-radius: 5px;width:90%;height:90%;font-size:10px;align=left;" type="button"
+			onclick="window.location.href = '{{request.session.local_toggle}}/bounce_matrix';">Update All</button>
+				<br>
 				</th>
+
+
 				{% for item in jobs %}
 				<th style="border:1px solid black;">{{item.1}}</th>
 			{% endfor %}
@@ -195,6 +233,37 @@ th {
 
 </form>
 
+<!-- Modal For Are you sure to Close -->
+<div class="modal fade" id="myModal" role="dialog">
+	<div class="modal-dialog modal-sm">
+		<div class="modal-content" >
+			<div class="modal-header">
+				<button type="button" class="close" data-dismiss="modal">&times;</button>
+				<h4 class="modal-title"><mark><font color="#000000" size ="5">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+					Warning
+					&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</font></mark></h4>
+			</div>
+			<div class="modal-body" >
+				<font color="#000000" size ="4">
+						<p align="left">
+								<b>You are about to Update Entire Shift. Are you sure?.<br>It Will take about 10min after clicking OK</b><br><br>
+								&nbsp;&nbsp;&nbsp;
+								<button style="background-color: #AAAAAA;border-radius: 10px;width:62px;height:33px;font-weight: 500;font-size:14px;align=left;" 
+								type="button" onclick="window.location.href = '{{request.session.local_toggle}}/training_matrix_update_all';">OK</button>
+								&nbsp;&nbsp;&nbsp;
+								<button style="background-color: #AAAAAA;border-radius: 10px;width:62px;height:33px;font-weight: 500;font-size:14px;align=left;" 
+								type="button" onclick="window.location.href = '{{request.session.local_toggle}}/update_matrix_cancel';">Cancel</button>
+			</p>
+				</font>
+			</div>
+			<div class="modal-footer">
+				<p align="left">
+				<img src="/static/media/JELogo.gif?{{TCUR}}"  style="border-radius: 25px;" height="40" width="150">
+			</p>    
+			</div>
+		</div>
+	</div>
+</div>
 
 
 
