completing the training matrix

--- a/trakberry/templates/test71.html
+++ b/trakberry/templates/test71.html
@@ -1,12 +1,23 @@
 <html>
 <body>
 
-{% for i in matrix %}
 
-{{i.0}} \\\\ {{i.1}} \\\ {{i.2}}
+	
+{% for i in matrix %}
+i.0: {{i.0}} <br>
+i.1: {{i.1}} <br>
+i.2:  {{i.2}} <br> 
+i.3:  {{i.3}}<br>
+<br>
+****************************************************************
+****************************************************************
 <br>
 {% endfor %}
+<br><br><br>
+
+{% for i in jobs %}
+
+{{i}}
 <br>
-
-
+{% endfor %}
 </body></html>
