--- a/trakberry/templates/training_matrix2.html
+++ b/trakberry/templates/training_matrix2.html
@@ -150,10 +150,18 @@ th {
       <tr>
 
 
-				<th style="border:1px solid black;z-index: 95;font-size:70%;background-color: #b3b3b3;">
+				<!-- <th style="border:1px solid black;z-index: 95;font-size:70%;background-color: #b3b3b3;">
 					<button style="text-align: left;width:100%;font-size: 100%;border-style: solid;border-color:#b3b3b3;border-radius: 0px;background-color:#b3b3b3;" type="button" 
-				onclick="window.location.href = '{{request.session.local_toggle}}/training_matrix_find/get/{{item2.2.0}}';">
+				onclick="window.location.href = '{{request.session.local_toggle}}/training_matrix_find/get/{{item2.2.0.0}}';">
+				{{item2.0.0}} -->
+
+
+					<th style="border:1px solid black;z-index: 95;font-size:70%;background-color: #b3b3b3;">
+					<button style="text-align: left;width:100%;font-size: 100%;border-style: solid;border-color:#b3b3b3;border-radius: 0px;background-color:#b3b3b3;" type="button" 
+				onclick="window.location.href = '{{request.session.local_toggle}}/training_matrix_find/get/{{item2.2.0|slice:"-2"}}';">
 				{{item2.0.0}}
+
+
 			</button></th>
 
 				{% for item in item2.1 %}
