updated barcode scanner to allow skid count set and check for different part scanned than one being scanned

--- a/trakberry/templates/kiosk/barcode_main.html
+++ b/trakberry/templates/kiosk/barcode_main.html
@@ -145,7 +145,7 @@
 			    	<li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</li>
 			    	<li><a href="{{request.session.local_toggle}}/barcode_reset"><span class="glyphicon glyphicon-signal"></span> Reset Count</a></li>
                     <li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</li>
-                    <li><a href="#"><span class="glyphicon glyphicon-erase"></span> Set Count</a></li>
+                    <li><a href="{{request.session.local_toggle}}/barcode_count"><span class="glyphicon glyphicon-erase"></span> Set Count</a></li>
                     <li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</li>
                     <li><a href="{{request.session.local_toggle}}/barcode_verify"><span class="glyphicon glyphicon-search"></span>Verify Scans</a></li>
 			    	<li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</li>
