--- a/trakberry/templates/barcode_warning_part.html
+++ b/trakberry/templates/barcode_warning_part.html
@@ -14,17 +14,15 @@
 New Part Scanned:{{current_part}}
 </font> <br>
 <font style="font-size: 50px; color:rgb(176, 161, 240); text-shadow: 1px 1px 2px black, 0 0 25px blue, 0 0 5px darkgoldenrod;">
-Part being scanned:{{last_part}}
+Part that was being scanned:{{last_part}}
     </font>
 <br><br><br>
-<font style="font-size: 30px; color:rgb(176, 161, 240); text-shadow: 1px 1px 2px black, 0 0 25px blue, 0 0 5px darkgoldenrod;">
-<br><br>
-<font style="font-size: 50px; color:rgb(176, 161, 240); text-shadow: 1px 1px 2px black, 0 0 25px blue, 0 0 5px darkgoldenrod;">
-
-    </font><br>
+<font style="font-size: 80px; color:rgb(176, 161, 240); text-shadow: 1px 1px 2px black, 0 0 25px blue, 0 0 5px darkgoldenrod;">CONTACT YOUR SUPERVISOR !
+<br>
 <!-- &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 <button onclick="location.href = '{{request.session.local_toggle}}/barcode_input';" id="myButton" class="float-left submit-button" style="width: 225px;height: 100px;font-size: 37px;"><b>OK</b></button> -->
-<button onclick="location.href = '{{request.session.local_toggle}}/barcode_reset';" id="myButton" class="float-left submit-button" style="width: 325px;height: 100px;font-size: 37px;" ><b>That's OK Start New Skid</b></button>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+<button onclick="location.href = '{{request.session.local_toggle}}/barcode_input';" id="myButton" class="float-left submit-button" style="width: 325px;height: 100px;font-size: 37px;" ><b>Acknowledge</b></button>
 
 </font>
 </body>
