updated Barcode scanner for 10R140 wrong part

--- a/trakberry/templates/test71.html
+++ b/trakberry/templates/test71.html
@@ -1,8 +1,8 @@
 <html>
 <body>
-	{% if request.session.update_manpower = 1 %}
-		<meta http-equiv="refresh" content="0; url={{request.session.local_toggle}}/manpower_update" />
-	{% endif %}
+	{% for i in matrix %}
+{{i}}<br>
+	{% endfor %}
 	<br><br><br>
 	Checking for update time
 </body></html>
