--- a/trakberry/templates/test71.html
+++ b/trakberry/templates/test71.html
@@ -1,8 +1,20 @@
-<html>
-<body>
-	{% for i in matrix %}
+{% extends "master.html" %}
+
+{% block content %}
+<!-- <meta http-equiv="refresh" content="5; url={{request.session.local_toggle}}/production_entry_check" /> -->
+<font style="font-size: 24px; color:rgb(196, 196, 196);">
+***** GOOD ENTRIES *****  <br>
+	{% for i in data1 %}
 {{i}}<br>
 	{% endfor %}
-	<br><br><br>
-	Checking for update time
-</body></html>
+	<br><br><br>	
+******BAD ENTRIES ***** <br>
+{% for i in data2 %}
+{{i}}<br>
+	{% endfor %}
+	<br><br><br>	
+	
+DONE UPDATE
+</font>
+
+{% endblock %}
