--- a/trakberry/templates/master.html
+++ b/trakberry/templates/master.html
@@ -110,6 +110,9 @@
 				        <li><a href="#" class="dropdown-toggle" data-toggle="dropdown"><font style="color:rgb(169, 170, 119);"><span class="glyphicon glyphicon-stats"></span> Utilities<b class="caret"></font></b></a>
 							<ul class="dropdown-menu multi-level"  style="background-color:rgb(202, 230, 127);" >
 								<li><a href="{{request.session.local_toggle}}/production_entry_check">Production Entry Check</a></li>
+
+								<li><a href="{{request.session.local_toggle}}/production_entry_fix">Production Entry Fix</a></li>
+
 								<li><a href="{{request.session.local_toggle}}/scrapdate_fix1">Fix Scrap Date</a></li>
 								<li><a href="{{request.session.local_toggle}}/scrap_backup">Scrap Backup</a></li>
 								<li><a href="{{request.session.local_toggle}}/scrap_restore">Scrap Restore</a></li>
