fixed tracking glitch

--- a/trakberry/templates/test73.html
+++ b/trakberry/templates/test73.html
@@ -7,7 +7,7 @@
 <table>
 	<tr>
 		<td style="font-size: 24px; color:rgb(53, 47, 47);border:1px solid rgb(255, 238, 0);background-color:rgb(158, 158, 158);">
-			&nbsp;&nbsp;&nbsp;ID&nbsp;&nbsp;&nbsp;
+			&nbsp;&nbsp;&nbsp;Note&nbsp;&nbsp;&nbsp;
 		</td>
 		<td style="font-size: 24px; color:rgb(53, 47, 47);border:1px solid rgb(255, 238, 0);background-color:rgb(158, 158, 158);">
 			&nbsp;&nbsp;&nbsp;Employee&nbsp;&nbsp;&nbsp;
@@ -33,14 +33,15 @@
 	</tr>
 	{% for i in data %}
 		<tr>
-			<td style="font-size: 24px; color:rgb(196, 196, 196);border:1px solid rgb(255, 238, 0);">
+			
 				{% if i.1 == '0' %}
-				
-				<button style="column-fill: auto;background-color: rgb(34, 34, 28);border:none;outline:none;"
+				<td style="font-size: 24px; color:rgb(71, 64, 64);border:1px solid rgb(255, 238, 0);">
+					<button style="column-fill: auto;background-color: rgb(247, 247, 159);border:none;outline:none;"
 						type="submit" name="delete1" value="{{i.0}}" /><b><font style="font-size: 15px";>Not Scheduled</font>
-				</b></button>
+						</b></button>
 				{% else %}
-				&nbsp;&nbsp;&nbsp;{{i.1}}&nbsp;&nbsp;&nbsp;
+				<td style="font-size: 24px; color:rgb(196, 196, 196);border:1px solid rgb(255, 238, 0);">
+					&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 				{% endif %}
 			</td>
 			<td style="font-size: 24px; color:rgb(196, 196, 196);border:1px solid rgb(255, 238, 0);">
@@ -59,7 +60,13 @@
 				&nbsp;&nbsp;&nbsp;{{i.7}}&nbsp;&nbsp;&nbsp;
 			</td>
 			<td style="font-size: 24px; color:rgb(196, 196, 196);border:1px solid rgb(255, 238, 0);">
-				&nbsp;&nbsp;&nbsp;{{i.9}}&nbsp;&nbsp;&nbsp;
+				{% if i.1 == '0' %}
+					<button style="column-fill: auto;background-color: rgb(37, 37, 29);border:none;outline:none;"
+						type="submit" name="pending1" value="{{i.0}}" /><b><font style="font-size: 15px";>Talked To</font>
+						</b></button>
+				{% else %}
+						&nbsp;&nbsp;&nbsp;{{i.9}}&nbsp;&nbsp;&nbsp;
+				{% endif %}
 			</td>
 			<td style="font-size: 24px; color:rgb(196, 196, 196);border:1px solid rgb(255, 238, 0);">
 				&nbsp;&nbsp;&nbsp;{{i.10}}&nbsp;&nbsp;&nbsp;
