updated maintenance app

--- a/trakberry/templates/redirect_maint.html
+++ b/trakberry/templates/redirect_maint.html
@@ -1,12 +1,4 @@
-<html lang="en">
-{{request.session.scrap_part}}
-<br>{{request.session.scrap_operation}}
-<br>{{request.session.scrap_category}}
-<br>{{request.session.scrap_amount}}
-<br><br>
-{{scrap_part}}<br>
-Cost:{{cost}}
 
-<!-- <meta http-equiv="refresh" content="0; url={{request.session.local_toggle}}/maint" /> -->
-</html>
+<meta http-equiv="refresh" content="0; url={{request.session.local_toggle}}/maint" />
+
 
