--- a/trakberry/templates/track.html
+++ b/trakberry/templates/track.html
@@ -214,7 +214,7 @@ End of Shift Projection : {{request.session.projection1}}
 </td></tr>
 </table>
 <br><br>
-<b><u>Previous Shifts</u></b>
+<b><u>Previous Shifts</u>  {{request.session.total_test}}</b>
 <br>
 <table style="width:40%;border: 1px solid black;"><tr><td style="border:1px solid black;">
 {% for i in datax %}
