--- a/trakberry/templates/maint.html
+++ b/trakberry/templates/maint.html
@@ -98,11 +98,11 @@
 <style>
     {% if request.session.bounce2 == 1 %} 
         .modal-body
-        {background-color: rgb(188, 210, 248);}
+        {background-color: rgb(223, 216, 172);}
         .modal-header
-        {background-color: rgb(140, 156, 184);}
+        {background-color: rgb(207, 201, 163);}
         .modal-footer
-        {background-color: rgb(188, 210, 248);}
+        {background-color: rgb(207, 201, 163);}
         .modal 
         {border-radius: 25px; }
     {% endif %}
@@ -120,10 +120,10 @@
 {% block refresh %}
 
 
-<!-- {% if request.session.refresh_maint != 3 %}
-<meta http-equiv="refresh" content="8; url={{request.session.local_toggle}}/maint"/>
+{% if request.session.refresh_maint != 3 %}
+<meta http-equiv="refresh" content="60; url={{request.session.local_toggle}}/maint"/>
 
-{% endif %} -->
+{% endif %}
 
 {% endblock %}
 {% if request.session.refresh_maint == 1 %}
@@ -199,19 +199,16 @@
 	
 {% elif i.3 == E %}
     <div class="row">
-		<div class="col-sm-8" style="background-color: rgb(216, 213, 173);border-radius: 0px;border-style: solid;border-width: 1px;border-color: #000000;height:30px;"><font color="#000000" size ="4" border="1">{{i.0}} : {{ i.1}}</div>
+		<div class="col-sm-8" style="background-color: rgb(252, 244, 136);border-radius: 0px;border-style: solid;border-width: 1px;border-color: #000000;height:30px;"><font color="#000000" size ="4" border="1">{{i.0}} : {{ i.1}}</div>
 		
 	</div>	
     <div class="row">
 		
-		<div class="col-sm-4" style="background-color: rgb(216, 213, 173);border-radius: 25px;border-style: solid;border-width: 1px;border-color: #000000;height:30px;"><font color="#000000" size ="3" border="1"><b>
+		<div class="col-sm-8" style="background-color: rgb(216, 213, 173);border-radius: 25px;border-style: solid;border-width: 1px;border-color: #000000;height:30px;"><font color="#000000" size ="3" border="1"><b>
 		
 		<center><a href="{{request.session.local_toggle}}/mcall/get/{{ i.2 }}" style="color: black">{{i.3}}</b></center></a>
 		</div>
-		<div class="col-sm-4" style="background-color: rgb(252, 244, 136);border-radius: 25px;border-style: solid;border-width: 1px;border-color: #000000;height:30px;"><font color="#000000" size ="3" border="1"><b>
-        <!-- <center><a href="{{request.session.local_toggle}}/mclose/get/{{ i.2 }}" style="color: black">Complete</b></a></center> -->
-        <center><a href="{{request.session.local_toggle}}/mclose/get/{{ i.2 }}" style="color: black">Complete</b></a></center>
-		</div>
+
 		
 	</div>
 
