--- a/trakberry/templates/test73.html
+++ b/trakberry/templates/test73.html
@@ -7,6 +7,9 @@
 <table>
 	<tr>
 		<td style="font-size: 24px; color:rgb(53, 47, 47);border:1px solid rgb(255, 238, 0);background-color:rgb(158, 158, 158);">
+			&nbsp;&nbsp;&nbsp;Date&nbsp;&nbsp;&nbsp;
+		</td>
+		<td style="font-size: 24px; color:rgb(53, 47, 47);border:1px solid rgb(255, 238, 0);background-color:rgb(158, 158, 158);">
 			&nbsp;&nbsp;&nbsp;Note&nbsp;&nbsp;&nbsp;
 		</td>
 		<td style="font-size: 24px; color:rgb(53, 47, 47);border:1px solid rgb(255, 238, 0);background-color:rgb(158, 158, 158);">
@@ -33,8 +36,12 @@
 	</tr>
 	{% for i in data %}
 		<tr>
+			<td style="font-size: 24px; color:rgb(196, 196, 196);border:1px solid rgb(255, 238, 0);">
+				&nbsp;&nbsp;&nbsp;{{i.2}}&nbsp;&nbsp;&nbsp;
+			</td>
 			
 				{% if i.1 == '0' %}
+				
 				<td style="font-size: 24px; color:rgb(71, 64, 64);border:1px solid rgb(255, 238, 0);">
 					<button style="column-fill: auto;background-color: rgb(247, 247, 159);border:none;outline:none;"
 						type="submit" name="delete1" value="{{i.0}}" /><b><font style="font-size: 15px";>Not Scheduled</font>
@@ -59,12 +66,13 @@
 			<td style="font-size: 24px; color:rgb(196, 196, 196);border:1px solid rgb(255, 238, 0);">
 				&nbsp;&nbsp;&nbsp;{{i.7}}&nbsp;&nbsp;&nbsp;
 			</td>
-			<td style="font-size: 24px; color:rgb(196, 196, 196);border:1px solid rgb(255, 238, 0);">
 				{% if i.1 == '0' %}
-					<button style="column-fill: auto;background-color: rgb(37, 37, 29);border:none;outline:none;"
-						type="submit" name="pending1" value="{{i.0}}" /><b><font style="font-size: 15px";>Talked To</font>
+				<td style="font-size: 24px; color:rgb(65, 66, 62);border:1px solid rgb(255, 238, 0);">
+					<button style="column-fill: auto;background-color: rgb(247, 199, 159);border:none;outline:none;"
+						type="submit" name="pending1" value="{{i.0}}" /><b><font style="font-size: 15px";>&nbsp;&nbsp;&nbsp;Talked To&nbsp;&nbsp;</font>
 						</b></button>
 				{% else %}
+				<td style="font-size: 24px; color:rgb(196, 196, 196);border:1px solid rgb(255, 238, 0);">
 						&nbsp;&nbsp;&nbsp;{{i.9}}&nbsp;&nbsp;&nbsp;
 				{% endif %}
 			</td>
