working on the weekly numbers for tracking

--- a/trakberry/templates/track.html
+++ b/trakberry/templates/track.html
@@ -212,6 +212,16 @@ Current shift target: {{request.session.target1}}
 </td><td>
 End of Shift Projection : {{request.session.projection1}}
 </td></tr>
+<tr><td>
+	Week to Date: {{request.session.week_count1}}
+	</td><td>
+	Week Projection: {{request.session.week_projection1}}
+</td><td>
+	Last Week: {{request.session.week_count1a}}
+</td><td>
+	2 Weeks Ago: {{request.session.week_count1b}}
+	</td></tr>
+
 </table>
 <br><br>
 <b><u>Previous Shifts</u>  {{request.session.total_test}}</b>
@@ -262,6 +272,15 @@ End of Shift Projection : {{request.session.projection1}}
 	</td><td>
 	End of Shift Projection : {{request.session.projection2}}
 	</td></tr>
+	<tr><td>
+		Week to Date: {{request.session.week_count2}}
+		</td><td>
+		Week Projection: {{request.session.week_projection2}}
+	</td><td>
+		Last Week: {{request.session.week_count2a}}
+	</td><td>
+		2 Weeks Ago: {{request.session.week_count2b}}
+		</td></tr>
 	</table>
 	<br><br>
 	<b><u>Previous Shifts</u></b>
